# vercel-deploy

./: Cargo.toml  README.mdngit  vercel-build.sh  vercel.json
api/: fib.rs  handler.rs  handler_fib.rs
