[package]
edition = "2021"
name = "vercel-template"
version = "0.1.0"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
serde_json = {version = "1", features = ["raw_value"]}
tokio = {version = "1", features = ["macros"]}
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
url = "2"
vercel_runtime = {version = "1"}

# You can specify a library for shared logic here (optional)
# [lib]
# path = "src-rs/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "handler"
path = "api/handler.rs"

[[bin]]
name = "handler_fib"
path = "api/handler_fib.rs"

# Note that you need to provide unique names for each binary:
# [[bin]]
# name = "user-id"
# path = "api/user/[id].rs"
#
# [[bin]]
# name = "group-id"
# path = "api/group/[id].rs"
